--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<h1 class="welcome">Welcome!</h1>
+		<h1 class="welcome">We have something for you!</h1>
 		<a class="button" href="curses.html">
 			<img src="img/paw-print-.png" alt="">
 			<p>Start</p>
