--- a/curses.html
+++ b/curses.html
@@ -166,6 +166,7 @@ Thêm tuổi mới mong bà trưởng thành hơn chụp hình dìm hãy dùng f
             </div>
         </div>
         <a href="https://meet.google.com/tai-vgrx-ddg" class="enjoy-button">Click to enjoy</a>
+        <p class="footer">By nguyenanhdo200213@gmail.com</p>
     </div>
    
 </body>
