--- a/curses.html
+++ b/curses.html
@@ -76,7 +76,7 @@ Lời cuối: Happy birthday Kiều My bạnnnn tuiii ❤
                          khai sinh mang họ của ba nè, được có tên trong sổ hộ khẩu, sổ đỏ nè.....Lý do 
                          thứ hai đó chính là lần sinh nhật năm nay khác với những năm trước vì con Covid 
                          đáng ghét mà giờ tụi mình phải tổ chức online
-                         như thế này, quá là nhớ luôn, cúng 4 tháng rồi không gặp nhau nhưng mà 
+                         như thế này, quá là nhớ luôn, cũng 4 tháng rồi không gặp nhau nhưng mà 
                          không sao không gì ngăn cản nổi tình iu thương này nhaaaa.<br>
                         Tuổi mới rồi nè, hãy luôn luôn thật hạnh phúc và gặp nhiều 
                         may mắn nha, dù có gặp chuyện gì cũng phải không được” 
